test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_not_op.draco
proc main() void : a := not b; corp;

