test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_not_as_identifier.draco
int not;
 
proc main() void : a := 1; corp;
